<resources>
    <string name="app_name">Buffy</string>
    <string name="xander">Xander</string>
    <string name="willow">Willow</string>
    <string name="glory">Glory</string>
    <string name="cordelia">Cordelia</string>
    <string name="darla">Darla</string>
    <string name="anya">Anya</string>
    <string name="dawn">Dawn</string>
    <string name="joyce">Joyce</string>
    <string name="two_times">Twice</string>
    <string name="three_times">Three Times</string>
    <string name="four_times">Four Times</string>
    <string name="five_times">Five Times</string>
    <string name="kendra">Kendra</string>
    <string name="faith">Faith</string>
    <string name="kennedy">Kennedy</string>
    <string name="tara">Tara</string>
    <string name="andrew">Andrew</string>
    <string name="spike">Spike</string>
    <string name="jonathan">Jonathan</string>
    <string name="warren">Warren</string>
    <string name="ethan">Ethan Rayne</string>
    <string name="wesley">Wesley</string>
    <string name="snyder">Principal Snyder</string>
    <string name="giles">Giles</string>
    <string name="angel">Angel</string>
    <string name="drusilla">Drusilla</string>
    <string name="submit">Submit</string>
    <string name="restart">Restart</string>
    <string name="quiz_details">Buffy the Vampire Slayer Quiz</string>
    <string name="best_friend_question">Who was/were Buffy&quot;s best friend(s)? (check all that apply)</string>
    <string name="sister_question">Who was Buffy&quot;s sister</string>
    <string name="death_question">How many times did Buffy die?</string>
    <string name="next_slayer_question">What slayer was called after Buffy&quot;s first death?</string>
    <string name="trio_question">What were the names of the trio that tried to take over Sunnydale</string>
    <string name="watcher_question">What was the name of Buffy&quot;s first watcher</string>
    <string name="soul_question">What vampire(s) had/got a soul? (check all that apply)</string>
</resources>
