<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quiz_details"
            android:layout_gravity="center_horizontal"
            android:textSize="24sp"
            android:textStyle="bold"/>
        <!-- first question-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/best_friend_question"
            android:id="@+id/best_friend_question"
            style="@style/question_style" />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xander"
            android:id="@+id/best_friend_xander" />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/willow"
            android:id="@+id/best_friend_willow" />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/glory"
            android:id="@+id/best_friend_glory" />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cordelia"
            android:id="@+id/best_friend_cordelia" />
        <!-- second question-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sister_question"
            android:id="@+id/sister_question"
            style="@style/question_style"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/darla"
                android:id="@+id/sister_darla"
                android:onClick="onSisterClicked"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/anya"
                android:id="@+id/sister_anya"
                android:onClick="onSisterClicked"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dawn"
                android:id="@+id/sister_dawn"
                android:onClick="onSisterClicked"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/joyce"
                android:id="@+id/sister_joyce"
                android:onClick="onSisterClicked"/>
        </RadioGroup>
        <!-- third question-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/death_question"
            android:id="@+id/number_of_deaths_question"
            style="@style/question_style"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/four_times"
                android:id="@+id/four"
                android:onClick="onNumberOfDeathsClicked"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/two_times"
                android:id="@+id/twice"
                android:onClick="onNumberOfDeathsClicked"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/three_times"
                android:id="@+id/three"
                android:onClick="onNumberOfDeathsClicked"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/five_times"
                android:id="@+id/five"
                android:onClick="onNumberOfDeathsClicked"/>
        </RadioGroup>
        <!-- fourth question-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_slayer_question"
            android:id="@+id/slayer_question"
            style="@style/question_style"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kendra"
                android:id="@+id/next_slayer_kendra"
                android:onClick="onNextSlayerClicked"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/faith"
                android:id="@+id/next_slayer_faith"
                android:onClick="onNextSlayerClicked"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kennedy"
                android:id="@+id/next_slayer_kennedy"
                android:onClick="onNextSlayerClicked"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tara"
                android:id="@+id/next_slayer_tara"
                android:onClick="onNextSlayerClicked"/>
        </RadioGroup>
        <!-- fifth question-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trio_question"
            android:id="@+id/trio_names_question"
            style="@style/question_style"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/andrew"
            android:id="@+id/trio_andrew" />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spike"
            android:id="@+id/trio_spike" />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jonathan"
            android:id="@+id/trio_jonathan" />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/warren"
            android:id="@+id/trio_warren" />
        <!-- sixth question-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/watcher_question"
            android:id="@+id/watcher_question"
            style="@style/question_style"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ethan"
                android:onClick="onWatcherClicked"
                android:id="@+id/watcher_ethan"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wesley"
                android:onClick="onWatcherClicked"
                android:id="@+id/watcher_wesley"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/snyder"
                android:onClick="onWatcherClicked"
                android:id="@+id/watcher_snyder"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/giles"
                android:onClick="onWatcherClicked"
                android:id="@+id/watcher_giles"/>
        </RadioGroup>
        <!-- seventh question-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/soul_question"
            android:id="@+id/soul_question"
            style="@style/question_style"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/angel"
            android:id="@+id/soul_angel" />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spike"
            android:id="@+id/soul_spike" />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/drusilla"
            android:id="@+id/soul_drusilla" />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/darla"
            android:id="@+id/soul_darla" />
        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="@string/submit"
            android:textOn="@string/restart"
            android:id="@+id/submit_restart"
            android:onClick="onSubmitRestartClicked"
            android:layout_gravity="center_horizontal"/>
</LinearLayout>
</ScrollView>